# baza_dan

./: README.md  db_manager.py  hh_api.py  main.py  pyproject.toml
db_manager/: DBManager.py
