[tool.poetry]
name = "baza-dan"
version = "0.1.0"
description = ""
authors = ["Roman <sqrap@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
requests = "^2.32.3"
fetch-data = "^0.2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
